syntax = "proto3";

option go_package = "/rpc";

message Checkout {
  string order_id = 1;
  string sku_id = 2;
  string customer_id = 3;
  string discount_code = 4;
}

message CheckoutReq {
  repeated Checkout checkout_items = 1;
}

message CheckoutResp {
  bool success = 1;
}
